tests/errors/error_display/test_hll_defer_reject_break.err.expected
error: at 4:25: [HTC-ControlFlowInDefer] In function 'f': break is not allowed inside defer
   |
 4 |                 defer { break; };
   |                         ^^^^^
